align style fix

--- a/src/less/in-depth.less
+++ b/src/less/in-depth.less
@@ -31,8 +31,8 @@
 }
 
 .aside() {
-  max-width: 100%;
-  
+  max-width: @width;
+
   > * {
     margin: 0;
   }
